--- a/client22.html
+++ b/client22.html
@@ -10,108 +10,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="client23.css" />
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+    <script type="text/javasscript" src="addToCart.js"></script>
 	
-		
-	
-<style>
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-</style>
 	
 </head>
 
 <body>
 	
-
     <nav class="navbar">
         <div class="navbar-container container">
             <input type="checkbox" name="" id="">
@@ -128,7 +34,9 @@ img {vertical-align: middle;}
                
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <h1  class="logo"><p style="font-size:12pt;">AAJICHA KHAU</p> 
+            <div class="logo">
+                <h1 style="font-size: 20px;">AAJICHA KHAU</h1>
+            </div
         </div>
     </nav>
     <div class="slideshow-container">
@@ -151,8 +59,8 @@ img {vertical-align: middle;}
   <div class="text">Caption Three</div>
 </div>
 
-<a class="prev" onclick="plusSlides(-1)">❮</a>
-<a class="next" onclick="plusSlides(1)">❯</a>
+<a class="prev arrows" onclick="plusSlides(-1)">❮</a>
+<a class="next arrows" onclick="plusSlides(1)">❯</a>
 
 </div>
 <br>
@@ -208,13 +116,14 @@ function showSlides(n) {
     </section>
     <section id="food">
         <h2>Types of food</h2>
+
         <div class="food-container container">
             <div class="food-type fruite">
                 <div class="img-container">
                     <img src="papad.jpg" alt="error" />
                     <div class="img-content">
                         <h3>papad</h3>
-                        <a href="roti.jpg" class="btn btn-primary" target="blank">learn
+                        <a href="roti.jpg" class="btn btn-primary" style="background-color: #FFDD00;" target="blank">learn
                             more</a>
                     </div>
                 </div>
@@ -224,7 +133,7 @@ function showSlides(n) {
                     <img src="mm.jpg" alt="error" />
                     <div class="img-content">
                         <h3>Roti</h3>
-                        <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">learn
+                        <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" style="background-color: #FFDD00;" target="blank">learn
                             more</a>
                     </div>
                 </div>
@@ -234,7 +143,7 @@ function showSlides(n) {
                     <img src="Pav bhaji.jpg" alt="error" />
                     <div class="img-content">
                         <h3>Pav bhaji</h3>
-                        <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" target="blank">learn
+                        <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" style="background-color: #FFDD00;"target="blank">learn
                             more</a>
                     </div>
                 </div>
@@ -253,7 +162,8 @@ function showSlides(n) {
                     <p>
                         is  made from toasted wheat semolina, which imparts a delicious nutty flavor. Just like besan laddus, they are usually spiked with green cardamom. It's common to add cashews and dried golden raisins during their shaping process
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFDD00;">Add to Cart</button>
                 </div>
             </div>
 
@@ -266,7 +176,8 @@ function showSlides(n) {
                     <p>
                        The perceived characteristics of good-quality rice are uniformity of size and shape, whiteness, long and thin uncooked grains (i.e., long and slender), and round and fat cooked grains (i.e., bold cooked grains).
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFD700;">Add to Cart</button>
                 </div>
             </div>
             <div class="food-menu-item">
@@ -278,7 +189,8 @@ function showSlides(n) {
                     <p>
                         Savory shankarpali are crisp and made with spices such as carom seeds, cumin, crushed black pepper, salt and do not include sugar. For this savory and salty shankarpali recipe, I included whole wheat flour, all-purpose flour and semolina to make the dough.
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFD700;">Add to Cart</button>
                 </div>
             </div>
             <div class="food-menu-item">
@@ -292,7 +204,8 @@ function showSlides(n) {
 						
 						a related confection made from wheat flour and butter and flavored with saffron and rose water. The final product has a dark brown color. The halva is spread thin on a plate till it dries into a paste.
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFD700;">Add to Cart</button>
                 </div>
             </div>
             <div class="food-menu-item">
@@ -304,7 +217,8 @@ function showSlides(n) {
                     <p>
                        The perceived characteristics of good-quality rice are uniformity of size and shape, whiteness, long and thin uncooked grains (i.e., long and slender), and round and fat cooked grains (i.e., bold cooked grains).
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFD700;">Add to Cart</button>
                 </div>
             </div>
             <div class="food-menu-item">
@@ -316,7 +230,8 @@ function showSlides(n) {
                     <p>
                          a mixture of raw usually green leafy vegetables (as lettuce) combined with other vegetables (as tomato and cucumber) and served with a dressing. 2 : a mixture of small pieces of food (as meat, fish, pasta, fruit, or vegetables) usually combined with a dressing.
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price" style="color:#FFD700"">Price: &#8377; 250</p>
+                    <button class="btn btn-primary" style="background-color: #FFD700;">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -400,7 +315,7 @@ function showSlides(n) {
                 <input type="text" placeholder="Your Name" />
                 <input type="email" placeholder="E-Mail" />
                 <textarea cols="30" rows="6" placeholder="Type Your Message"></textarea>
-                <a href="#" class="btn btn-primary">Submit</a>
+                <a href="#" class="btn btn-primary" style="background-color : #FFD700;">Submit</a>
             </div>
         </div>
     </section>
